[tool.poetry]
name = "leak-snek"
version = "0.1.0"
description = ""
authors = ["Daniil Fedyaev <wintercitizen@outlook.com>"]
readme = "README.md"
packages = [{include = "leak_snek"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.qa.dependencies]
ruff = "^0.0.269"
mypy = "^1.3.0"
pytest = "^7.3.1"


[tool.poetry.group.local.dependencies]
ipdb = "^0.13.13"
ipython = "^8.13.2"

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = [
    "D203",  # we are ok with class docstrings starting right after the class head
    "D213",  # we are ok with multi-line docstrings starting with the first line
    "D104",  # we are ok with __init__.py not having a docstring
]

[tool.mypy]
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
