[tool.poetry]
name = "leak-snek"
version = "0.0.1"
description = ""
authors = ["Daniil Fedyaev <wintercitizen@outlook.com>"]
readme = "README.md"
packages = [{include = "leak_snek"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.qa.dependencies]
ruff = "^0.0.269"
mypy = "^1.3.0"
pytest = "^7.3.1"
black = "^23.9.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.local.dependencies]
ipdb = "^0.13.13"
ipython = "^8.13.2"

[tool.ruff]
line-length = 120
select = ["ALL"]
ignore = [
    "D203",  # we are ok with class docstrings starting right after the class head
    "D213",  # we are ok with multi-line docstrings starting with the first line
    "D104",  # we are ok with __init__.py not having a docstring
]

[tool.ruff.per-file-ignores]
"tests/**/test_*.py" = [
    "S101",  # we are ok with using assert in tests
]

[tool.black]
line-length = 120

[tool.mypy]
strict = true
disallow_subclassing_any = false
# ignore_missing_imports = true

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "if TYPE_CHECKING",
    "pragma: no cover",
]
fail_under = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
